--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@shadcn/ui": "^0.0.4",
     "@types/styled-components": "^5.1.34",
     "framer-motion": "^12.0.3",
+    "html-to-docx": "^1.8.0",
     "mammoth": "^1.9.0",
     "next": "15.1.6",
     "react": "^19.0.0",
